# LevelEditor

./: LICENSE  LevelManager.js  README.md  TextureManager.js  UIManager.js  css.css  editor.js  index.html  main.js  package-lock.json  package.json  vite.config.js
js/: GLTFLoader.js
public/css/: style.css
public/js/: OrbitControls.js  TransformControls.js
public/js/three/: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
