[package]
name = "level-editor"
version = "1.3.0"
description = "A simple to use tool to create, edit, and view Kula World Levels."
authors = ["SaturnKai", "Murphy"]
license = "MIT"
repository = "https://github.com/kulaworkshop/leveleditor"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["shell-open"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
